--- a/styling/index.css
+++ b/styling/index.css
@@ -1,10 +1,3 @@
-body {
-    border: 4px solid yellowgreen;
-}
-.container {
-    height: auto;
-    width: auto;
-}
 .div1 { 
     background-color: #1F2937;
     padding: 4px;
@@ -13,6 +6,7 @@ body {
 .header{ 
     display:flex;
     justify-content: space-between;
+    padding: 20px;
 }
 .logo {
     font-size: 24px;
@@ -24,7 +18,24 @@ body {
     font-size: 18px;
     color: #E5E7EB;
 }
+.awesome{
+    font-size: 48px;
+    font-weight: 700;
+    color: #F9FAF8;
+}
 button {
     background-color: #3882F6;
     color: white;
+}
+
+img{
+    max-width: 100%;
+    max-height: 100%;
+}
+.secondary {
+    color:#E5E7EB;
+}
+.two {
+    display: flex;
+    padding: 20px;
 }
