--- a/styling/index.css
+++ b/styling/index.css
@@ -39,3 +39,40 @@ img{
     display: flex;
     padding: 20px;
 }
+.div2 >  *{
+    border: 4px solid;
+    justify-content: center;
+    padding: 8px;
+}
+.quote {
+    display: flex;
+}
+
+.info {
+    text-align: center;
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 700;
+}
+.img > img {
+   /* border: 4px solid #3882F6; */
+   width: 75%;
+}
+.img {
+    margin-left: auto;
+    margin-right: auto;
+}
+.div3 {
+    text-align: center;
+}
+.quote2 {
+    border: 4px blue solid;
+    text-align: center;
+    background-color: #E5E7EB;
+    font-size: 36px;
+    font-style: italic;
+    color: #1F2937;
+}
+.div3 {
+    text-align: center;
+}
