--- a/styling/index.css
+++ b/styling/index.css
@@ -1,3 +1,7 @@
+* {
+    text-align: center;
+    margin: 10px;
+}
 .div1 { 
     background-color: #1F2937;
     padding: 4px;
@@ -40,9 +44,8 @@ img{
     padding: 20px;
 }
 .div2 >  *{
-    border: 4px solid;
     justify-content: center;
-    padding: 8px;
+    padding: 10px;
 }
 .quote {
     display: flex;
@@ -55,7 +58,6 @@ img{
     font-weight: 700;
 }
 .img > img {
-   /* border: 4px solid #3882F6; */
    width: 75%;
 }
 .img {
@@ -66,7 +68,7 @@ img{
     text-align: center;
 }
 .quote2 {
-    border: 4px blue solid;
+    padding: 80px;
     text-align: center;
     background-color: #E5E7EB;
     font-size: 36px;
@@ -75,4 +77,13 @@ img{
 }
 .div3 {
     text-align: center;
+}
+.div4 {
+    color: #F9FAF8;
+    background-color: #1F2937;
+    text-align: center;
+    display: flex;
+}
+.copy{
+    justify-content: flex-end;
 }
