--- a/styling/index.css
+++ b/styling/index.css
@@ -1,19 +1,17 @@
 * {
     text-align: center;
-    margin: 10px;
-}
-body {
     margin: 0px;
 }
+
 .div1 { 
     background-color: #1F2937;
     padding: 4px;
-
 }
 .header{ 
     display:flex;
     justify-content: space-between;
     padding: 20px;
+    margin: 10px;
 }
 .logo {
     font-size: 24px;
@@ -69,7 +67,6 @@ img{
 }
 
 .quote2 {
-    margin:8px;
     padding: 80px;
     text-align: center;
     background-color: #E5E7EB;
@@ -100,15 +97,13 @@ action {
     justify-content: space-around;
     align-items: center;
     background-color: #3882F6;
-    /* padding: 3em; */
     width: 100%;
+    height: 100px;
     border-radius: 10px;
 }
 .left {
     display: flex;
     flex-direction: column;
-    /* gap: 10px; */
-
 }
 .sign button {
     border: 2px solid white;
